[package]
name = "mantra-lancer"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "Currency tracker for Massif Press' LANCER system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
crossterm = "0.28.1"
deranged = { version = "0.3.11", features = ["serde"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
ratatui = "0.28.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-async-std", "time"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting", "local-offset"] }
xdg = "2.5.2"
